force-app/main/default/objects/Forward_Duty_Contract__c/Forward_Duty_Contract__c.object-meta.xml
<CustomObject>
    <label>Forward Duty Contract</label>
    <nameField>
        <displayFormat>FDC-{0000000}</displayFormat>
        <label>Forward Contract Duty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward Duty Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>