force-app/main/default/objects/Forward_Duty_Contract__c/fields/Amount_Differs__c.field-meta.xml
<CustomField>
    <fullName>Amount_Differs__c</fullName>
    <formula>Total_Contract_Amount__c - Bank_Contract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Differs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>