force-app/main/default/objects/Forward_Duty_Contract__c/fields/Amount_in_SGD__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_SGD__c</fullName>
    <formula>IF(ISPICKVAL(Currency_Code__c, &apos;JPY&apos;) ,Total_Contract_Amount__c * Contract_Rate__c/100, Total_Contract_Amount__c * Contract_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Contract Amount * Contract Rate</inlineHelpText>
    <label>Amount in SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>