force-app/main/default/objects/Forward_Duty_Contract__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TMS_Banks</valueSetName>
    </valueSet>
</CustomField>