force-app/main/default/objects/Forward_Duty_Contract__c/fields/Bank_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contract_No__c</fullName>
    <label>Bank Contract No (Buy)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>