force-app/main/default/objects/Forward_Duty_Contract__c/fields/Cover_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cover_Percentage__c</fullName>
    <defaultValue>0.75</defaultValue>
    <label>Cover Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>