force-app/main/default/objects/Forward_Duty_Contract__c/fields/Execution_Amount_in_SGD__c.field-meta.xml
<CustomField>
    <fullName>Execution_Amount_in_SGD__c</fullName>
    <formula>IF(ISPICKVAL(Currency_Code__c, &apos;JPY&apos;) ,Execution_Amount__c * Contract_Rate__c/100, Execution_Amount__c * Contract_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Sold Amount in SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>