force-app/main/default/objects/Forward_Duty_Contract__c/fields/Forward_Contract_Buy_Approved__c.field-meta.xml
<CustomField>
    <fullName>Forward_Contract_Buy_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forward Contract Buy Approved</label>
    <type>Checkbox</type>
</CustomField>