force-app/main/default/objects/Forward_Duty_Contract__c/fields/Production_Month_YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>Production_Month_YYYYMM__c</fullName>
    <formula>TEXT(Purchase_Order__r.Production_Month__c)</formula>
    <label>Production Month (YYYYMM)</label>
    <type>Text</type>
</CustomField>