force-app/main/default/objects/Forward_Duty_Contract__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Forward Duty Contracts</relationshipLabel>
    <relationshipName>Forward_Duty_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>