force-app/main/default/objects/Forward_Duty_Contract__c/fields/Total_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Amount__c</fullName>
    <label>Total Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>