force-app/main/default/objects/Forward_Duty_Contract__c/validationRules/Can_not_edit_after_Buy_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_edit_after_Buy_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), Forward_Contract_Buy_Approved__c , $Permission.TMS_Makers_Permission)
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>You are not allowed to edit after Buy Contract approved</errorMessage>
</ValidationRule>